nymea-plugins-modbus (1.7.005-1) buster focal jammy; urgency=medium

  * Nymea Interface: Use old interface for evcharger - Hotfix 1.1.1 build

 -- Florian Knab <f.knab@consolinno.de> Mon, 8 Jan 2024 13:44:53 +0100

nymea-plugins-modbus (1.7.005) buster focal jammy; urgency=medium

  * GoodWe: fixed some meter values sign and scaling.

 -- Sebastian Ringer <s.ringer@consolinno.de> Wed, 20 Dec 2023 17:21:53 +0200

nymea-plugins-modbus (1.7.004) buster focal jammy; urgency=medium

  * Amperfied Energy Control discovery improved.

 -- Sebastian Ringer <s.ringer@consolinno.de> Fr, 1 Dec 2023 16:46:53 +0200

nymea-plugins-modbus (1.7.003) buster focal jammy; urgency=medium

  * Amperfied bugfixes & improvements.

 -- Sebastian Ringer <s.ringer@consolinno.de> Mon, 27 Nov 2023 16:13:53 +0200

nymea-plugins-modbus (1.7.002-1) buster focal jammy; urgency=medium

  * Adapt to new versioning schema

 -- Florian Knab <f.knab@consolinno.de> Thu, 19 Sep 2023 7:50:53 +0200

nymea-plugins-modbus (1.7.002) dev; urgency=medium

  * SDM630: Check for decreasing energy values and ignore them .

 -- Leonhard Heizinger <l.heizinger@consolinno.de>  Thu, 29 Aug 2023 10:28:48 +0100

nymea-plugins-modbus (1.7.001) dev; urgency=medium

  * Bugfix Mac address is null

 -- Knab Florian <f.knab@consolinno.de>  Thu, 24 Aug 2023 10:14:48 +0100

nymea-plugins-modbus (1.7.0) jammy; urgency=medium

  [ Michael Zanetti ]
  * New plugin: Senseair S8
  * Drexel&Weiss: Add min/max values to co2sensor

  [ Simon Stürz ]
  * ModbusRtu connection: Check reachablility in constructor

  [ Michael Zanetti ]
  * New plugin: Amperfied/Heidelberg

  [ Bernhard Trinnes ]
  * Drexel und Weiss: Add smartmeterconsumer interface

  [ Simon Stürz ]
  * huawei: Set energy states to 0 if not connected and filter invalid
    energy counter values
  * SMA: set energy values to 0 on disconnected

  [ Michael Zanetti ]
  * Schrack: Add firmware version state
  * Schrack: Rework discovery
