@@ -1,3 +1,10 @@
+nymea-plugins-modbus (1.7.006) buster focal jammy; urgency=medium
+
+ * Kaco SunSpec: set inverter power state to 0 when not connected.
+ * Kaco SunSpec: improved modbus RTU discovery.
+
+ -- Sebastian Ringer <s.ringer@consolinno.de> Thu, 13 Mar 2024 17:21:53 +0200
+
 nymea-plugins-modbus (1.7.005-1) buster focal jammy; urgency=medium
 
   * Nymea Interface: Use old interface for evcharger - Hotfix 1.1.1 build
